--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=perplexity
-aadhya.eduverse.prompt = "aadhya.eduverse.prompt=Give a short, clear answer (in Hindi) followed by a very simple real-life story. Then explain it in a few short Hindi steps like you're talking to an 18-year-old student from India who speaks Hindi at home. Use no big words. Keep total length under 70 words."
-aadhya.eduverse.prompt2 = "Now, explain it to me like I?m 10 years old. Use a simple story or analogy I can understand. Imagine I?m young who only speaks Hindi at home. Break it down like you?re telling a story from real life. If it helps, mix Hindi and English so it feels like how elders explain to kids in India. No big words. Make it clear."
+aadhya.eduverse.prompt = "aadhya.eduverse.prompt=Give a short, clear answer (in Hindi) followed by Explain this to me like I?m 18 years old. Use a simple story or analogy I can understand. Imagine I?m young who only speaks Hindi at home. Break it down like you?re telling a story  from real life . If it helps, mix Hindi and English so it feels like how elders explain to kids in India. No big words. Make it  clear. Always give output in hindi font only. The output must not exceed 250 words"
+
 spring.datasource.url=jdbc:mysql://localhost:3306/perplexity
 spring.datasource.username=root
 spring.datasource.password=root
