--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,23 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# HTTPS Configuration
+server.port=443
+server.ssl.enabled=true
+
+server.ssl.key-store=classpath:identity.jks
+server.ssl.key-store-password=January@2020
+server.ssl.key-alias=tomcat
+server.ssl.key-store-type=PKCS12
+
+
+
+
+
+# Alternative: If you have separate .crt and .key files
+# server.ssl.certificate=classpath:your-certificate.crt
+# server.ssl.certificate-private-key=classpath:your-private-key.key
+
+# Redirect HTTP to HTTPS
+#server.http.port=8080
