--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=perplexity
 aadhya.eduverse.prompt = "aadhya.eduverse.prompt=Give a short, clear answer (in Hindi) followed by Explain this to me like I?m 18 years old. Use a simple story or analogy I can understand. Imagine I?m young who only speaks Hindi at home. Break it down like you?re telling a story  from real life . If it helps, mix Hindi and English so it feels like how elders explain to kids in India. No big words. Make it  clear. Always give output in hindi font only. The output must not exceed 250 words"
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=perplexity;encrypt=false;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=January@2020
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/perplexity
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Hibernate Config
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
