--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=perplexity
 aadhya.eduverse.prompt = "aadhya.eduverse.prompt=Give a short, clear answer (in Hindi) followed by Explain this to me like I?m 18 years old. Use a simple story or analogy I can understand. Imagine I?m young who only speaks Hindi at home. Break it down like you?re telling a story  from real life . If it helps, mix Hindi and English so it feels like how elders explain to kids in India. No big words. Make it  clear. Always give output in hindi font only. The output must not exceed 200 words"
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=perplexity;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://192.168.1.200:1433;databaseName=perplexity;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=January@2020
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # HTTPS Configuration
-server.port=443
+server.port=449
 server.ssl.enabled=true
 
 server.ssl.key-store=classpath:identity.jks
@@ -29,3 +29,21 @@ server.ssl.key-store-type=PKCS12
 
 # Redirect HTTP to HTTPS
 #server.http.port=8080
+
+# Session Configuration
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.max-age=1800
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=lax
+server.servlet.session.persistent=true
+server.servlet.session.cookie.path=/
+
+# Session store configuration
+spring.session.store-type=none
+spring.session.timeout=30m
+
+# Logging for debugging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.perplexity.perplexity=DEBUG
