--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # HTTPS Configuration
-server.port=443
-server.ssl.enabled=true
+server.port=8080
+server.ssl.enabled=false
 
 server.ssl.key-store=classpath:identity.jks
 server.ssl.key-store-password=January@2020
