--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,11 @@ server.ssl.key-store-type=PKCS12
 
 # Redirect HTTP to HTTPS
 #server.http.port=8080
+
+# Perplexity API Configuration
+perplexity.api.url=https://api.perplexity.ai/chat/completions
+perplexity.api.key=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
+perplexity.api.timeout=60
+
+# HTTP Client Timeout Configuration
+spring.mvc.async.request-timeout=60000
